# hic-aws-project-costs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
aws_project_costs/: main.py  project-cost-schema.json  project_costs.py  schema.py
example/: 2024-01-01_2024-02-01.csv  output.csv  projects.yaml
tests/: test_project_costs.py  test_schema.py
